@@ -48,6 +48,7 @@
 - Fixed both false negative and false positive results in -m 3000 in -a 3 (affecting only NVIDIA GPU)
 - Fixed buffer overflow in -m 1800 in -O mode which is optimized to handle only password candidates up to length 15
 - Fixed buffer overflow in -m 4710 in -P mode and only in single hash mode if salt length is larger than 32 bytes
+- Fixed hardware management sysfs readings in status screen (typically ROCm controlled GPUs)
 - Fixed include guards in several header files
 - Fixed incorrect maximum password length support for -m 400 in optimized mode (reduced from 55 to 39)
 - Fixed internal access on module option attribute OPTS_TYPE_SUGGEST_KG with the result that it was unused
